--- a/app/src/main/res/layout/dialog_hosts.xml
+++ b/app/src/main/res/layout/dialog_hosts.xml
@@ -102,7 +102,7 @@
         android:hint="Password" />
     <EditText
         android:id="@+id/ssh_port"
-        android:inputType="text"
+        android:inputType="number"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
@@ -110,5 +110,5 @@
         android:layout_marginRight="4dp"
         android:layout_marginBottom="16dp"
         android:fontFamily="sans-serif"
-        android:hint="SSH_Port" />
+        android:hint="SSH_Port (enter number between 1-65535)" />
 </LinearLayout>
