--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,15 @@
         android:layout_height="?android:attr/actionBarSize"
         android:theme="@style/ThemeOverlay.AppCompat.DayNight.ActionBar"/>
 
+    <TextView
+        android:id="@+id/textWakeOnLan"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/black"
+        android:layout_gravity="center"
+        android:text="Wake on lan server and clients"
+        android:background="#00FF55"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -31,8 +40,14 @@
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
     </LinearLayout>
 
-    <View style="@style/Divider"
-        android:background="@android:color/black"/>
+    <TextView
+        android:id="@+id/textShutdownServer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/black"
+        android:layout_gravity="center"
+        android:text="Shutdown server and clients"
+        android:background="#00FF55"/>/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -40,11 +55,17 @@
         android:layout_weight="2"
         android:orientation="horizontal">
 
-        <ListView
-            android:id="@+id/listshutdown"
+        <!--Swipe Refresh Layout -->
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/refreshLayoutShutdownServer"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fadeScrollbars="false">
-        </ListView>
+            android:layout_height="match_parent">
+            <ListView
+                android:id="@+id/listshutdown"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:fadeScrollbars="false">
+            </ListView>
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
     </LinearLayout>
 </LinearLayout>
